# advent-of-code-2025

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
hardware/: 01.veryl  02.veryl  03.veryl  04.veryl  05.veryl  06.veryl  07.veryl
verilog/: 01.veryl
veryl/src/: 03.veryl  05.veryl  08.veryl  helpers.veryl
veryl/src/08/: orchestrator.veryl  union_find.veryl  utils.veryl  worker.veryl
veryl/src/test/: aoc_tasks.svh  test_parse_numbers.veryl
veryl/waves/: day_05.gtkw
