[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4", optional = true }
dhat = { version = "0.3", optional = true }
pico-args = "0.5"
tinyjson = "2.5"

# Solution dependencies
glam = "0.30"
itertools = "0.14"
pathfinding = "4.14"
